resized smartthings and fixed spacing

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -322,11 +322,11 @@ footer p {
   }
 
   #hue-logo {
-    margin-top: 23px;
+    margin-top: 33px;
   }
 
   #thalmic-logo {
-    margin-top: 72px;
+    margin-top: 87px;
   }
 
   #lifx-logo {
@@ -342,11 +342,11 @@ footer p {
   }
 
   #kinect-logo {
-    margin-top: 30px;
+    margin-top: 45px;
   }
 
   #keen-logo {
-    margin-top: 50px;
+    margin-top: 65px;
   }
 
   #spark-logo {
@@ -424,11 +424,11 @@ footer p {
   }
 
   #hue-logo {
-    margin-top: 18px;
+    margin-top: 27px;
   }
 
   #thalmic-logo {
-    margin-top: 59px;
+    margin-top: 69px;
   }
 
   #lifx-logo {
@@ -444,11 +444,11 @@ footer p {
   }
 
   #kinect-logo {
-    margin-top: 25px;
+    margin-top: 35px;
   }
 
   #keen-logo {
-    margin-top: 41px;
+    margin-top: 51px;
   }
 
   #spark-logo {
@@ -536,11 +536,11 @@ footer p {
   }
 
   #hue-logo {
-    margin-top: 14px;
+    margin-top: 20px;
   }
 
   #thalmic-logo {
-    margin-top: 41px;
+    margin-top: 46px;
   }
 
   #lifx-logo {
@@ -556,11 +556,11 @@ footer p {
   }
 
   #kinect-logo {
-    margin-top: 15px;
+    margin-top: 20px;
   }
 
   #keen-logo {
-    margin-top: 27px;
+    margin-top: 32px;
   }
 
   #spark-logo {
